[project]
name = ""
version = ""
description = ""
authors = [
    {name = "makuwa8992", email = "45256779+YorkSu@users.noreply.github.com"},
]
dependencies = [
    "numpy>=1.23.1",
    "scipy>=1.6.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
